# thinkchain

./: .gitignore  README.md  config.py  config.yaml  gemini_adapter.py  llm_adapter.py  mcp_config.json  mcp_integration.py  project_setup.sh  pyproject.toml  pyproject_reference.toml  requirements.txt  run.py  thinkchain.py  thinkchain_cli.py  tool_discovery.py  ui_components.py
docs/: P1_research_codebase.md  P2_web_research.md  P3_implementation_plan.md  Untitled-1  blog.md  codebase_overview.md  configuration_guide.md  current_implementation_plan.md  implementation_details.md  implementation_plan.md  implementation_plan_v2.md  implementation_plan_v3.md  research_plan.md  step_by_step.md
llm_adapters/: __init__.py  anthropic_adapter.py  base.py  gemini_adapter.py  utils.py
test/: README.md  conftest.py  run_tests.py  test_adapter_units.py  test_llm_adapters_integration.py
tools/: __init__.py  base.py  diffeditortool.py  duckduckgotool.py  fileedittool.py  uvpackagemanager.py  weathertool.py
